# src/main/java/com/tmv/core/dto/RegisterDeviceDTO.java
@@ -1,0 +1,17 @@
+package com.tmv.core.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+public class RegisterDeviceDTO {
+    @NotBlank
+    private String token;
+    private String platform;
+}
